# conda2pyproj

./: README.md  conda2pyproj.py  pyproject.toml
