[project]
name = "conda2pyproj"
version = "0.1.7"
description = "Tool for automating the process of generating a new pyproject.toml from a conda venv"
dynamic = [
    "dependencies",
]
requires-python = ">=3.11"

[project.scripts]
conda2pyproj = "conda2pyproj:main"

[tool.unidep]
channels = [
    "conda-forge",
    "defaults",
]
dependencies = [
    "tomli-w",
    "conda-lock",
    "unidep",
]

[build-system]
requires = [
    "setuptools",
    "unidep",
]
build-backend = "setuptools.build_meta"
